--- a/templates/components/custom/home/section-shop-the-look.html
+++ b/templates/components/custom/home/section-shop-the-look.html
@@ -68,7 +68,7 @@
                 
                 <div class="custom_productLoading productSkeleton__list no-wrap"></div>
 
-                <div class="productGrid productGridCustom flex flex-wrap  ">
+                <div class="productGrid productGridCustom productGrid--shoplook">
                   
                 </div>
             </div>
